# ZhiSync

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: integration_minimal.py  udp_node.py
scripts/: run_udp_demo.sh
simulation/: __init__.py  metrics.py  run_simulation.py  scalability_test.py  train.py
simulation/datasets/: __init__.py  breath_dataset.py  ecg_dataset.py  motion_dataset.py
simulation/devices/: __init__.py  base_device.py  breath_device.py  ecg_device.py  motion_device.py
simulation/models/: __init__.py  breath_model.py  ecg_model.py  motion_model.py
zhisync/: __init__.py  fusion.py  node.py  transport.py  types.py
