[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zhisync"
version = "0.1.0"
description = "Metadata-driven collaborative inference SDK for decentralized healthcare IoT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - research release" }
authors = [
  { name = "Anshita Gupta", email = "anshitagupta.ag@kgpian.iitkgp.ac.in" },
  { name = "Sudip Misra", email = "sudipm@iitkgp.ac.in" },
]
dependencies = []

[project.optional-dependencies]
simulation = [
  "torch>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.65",
  "psutil>=5.9",
  "librosa>=0.10",
  "soundfile>=0.12",
  "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zhisync*", "simulation*"]
